<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bladeguard Tracker</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="locate">Send my position to the tracking server</string>
    <string name="map_name">View on map</string>
    <string name="settings">Settings</string>
    <string name="user_preferences">User Settings</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="anonymous">Anonymous tracking</string>
    <string name="anonymous_summary">Your stats can be collected anonymously if you do not want to sign up to this app. Check this checkbox to remain anonymous.</string>
    <string name="signup">Sign up...</string>
    <string name="new_user">New user Signup</string>
    <string name="user_password_confirm">Confirm password</string>
    <string name="start_signup">Sign up!</string>
    <string name="start_signup_summary">Register this user with the server now</string>
    <string name="user_name_summary">Your desired username</string>
    <string name="signup_progress">User is being created...""</string>
    <string name="signup_successful">User successfully created.</string>
    <string name="signup_failed">The user could not be created. The following error occured:</string>
    <string name="passwordchange_failed">The password could not be changed. The following error occured:</string>
    <string name="signup_server_message">Server reported error:</string>
    <string name="server_down">Unable to communicate with the server.</string>
    <string name="username_must_not_be_empty">Username must not be empty!</string>
    <string name="password_must_not_be_empty">Password must not be empty!</string>
    <string name="password_mismatch">Passwords do not match!</string>
    <string name="tracker_activated">Bladeguard Tracker activated</string>
    <string name="gps_ongoing">GPS data transmission is ongoing</string>
    <string name="track_length">Track length</string>
    <string name="average_speed">Speed</string>
    <string name="cycle_time">Cycle time</string>
    <string name="time_to_end">Time to End</string>
    <string name="connect_progress">Connecting to server...</string>
    <string name="map_selection">Route Selection</string>
    <string name="switching_map">Switching Route...</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="map_will_be_reset">This will reset the route for all connected users!</string>
    <string name="logging_in">Logging in...</string>
    <string name="credentials_wrong">The credentials you have provided are invalid.\n\nPlease enter a valid username / password combination (or use anonymous tracking)!</string>
    <string name="team">Team selection...</string>
    <string name="teamselection">Team selection</string>
    <string name="switching_team">Switching Team...</string>
    <string name="event">Event details</string>
    <string name="start">Start time</string>
    <string name="title">Title</string>
    <string name="participate">Yes! I\'m participating!</string>
    <string name="trigger_start">Start event</string>
    <string name="trigger_pause">Pause event</string>
    <string name="trigger_shutdown">End event</string>
    <string name="admin_commands">Administrator commands</string>
    <string name="command_executing">Executing command...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="activating_trackers">This will activate GPS tracking for all participating users.</string>
    <string name="deactivating_trackers">This will disable GPS tracking for all participating users.</string>
    <string name="terminating_event">This will deactivate tracking for all users, disconnect all control connections, terminate the current event and remove it from the event list.</string>
    <string name="command_error">There was an error performing your command</string>
    <string name="upcoming_events">Upcoming bladenight events:</string>
    <string name="select_events">Please select one of the above events to participate!</string>
    <string name="weather_decision">Weather</string>
    <string name="yes_rolling">Yes, we\'re rolling!</string>
    <string name="no_cancelled">Event cancelled</string>
    <string name="undecided">No decision yet</string>
    <string name="enter_weather_decision">Update weather decision</string>
    <string name="update_weather">This will send a weather notification to all users.</string>
    <string name="bladenight">Bladenight</string>
    <string name="map">Map</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="registration_failed">Messaging service registration failed</string>
    <string name="registration_failed_text">The registration with the Google Cloud Messaging service failed, because there is no registered Google account available on your device. In order to be able receive push weather notifications you will need a valid google account.</string>
    <string name="account_settings">Open account settings&#8230;</string>
    <string name="dont_show_again">Don\'t show this message again</string>
    <string name="enable_bridges">Enable bridges</string>
    <string name="disable_bridges">Disable Bridges</string>
    <string name="change_password">Change password</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="with_facebook">with Facebook</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="or">or</string>
    <string name="my_team">My Team</string>
    <string name="password_change_running">Changing password…</string>
    <string name="app_request">Invite your Friends!</string>
    <string name="join_me">Ride with me!</string>
</resources>
