<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:paddingRight="5dip">
    <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/tableLayout1" android:paddingTop="15dip" android:paddingBottom="5dip" android:paddingLeft="5dip" android:paddingRight="5dip">
        <TableRow android:id="@+id/titleRow" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <LinearLayout android:id="@+id/linearLayout3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingRight="15dip">
                <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/titleLabel" android:text="@string/title"></TextView>
                <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/titleSeparator" android:text=":"></TextView>
            </LinearLayout>
            <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/titleView"></TextView>
        </TableRow>
        <TableRow android:id="@+id/startRow" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <LinearLayout android:id="@+id/linearLayout2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:paddingRight="15dip">
                <TextView android:id="@+id/startLabel" android:text="@string/start" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content"></TextView>
                <TextView android:id="@+id/startSeparator" android:text=":" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content"></TextView>
            </LinearLayout>
            <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:id="@+id/startView"></TextView>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/participateCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participate"
            android:textAppearance="@android:style/TextAppearance.Large" />

    </LinearLayout>
    
</LinearLayout>
